--- a/README.org
+++ b/README.org
@@ -26,29 +26,29 @@
 #+DOWNLOADED: file:/var/folders/73/53s3wczx1l32608prn_fdgrm0000gn/T/TemporaryItems/（screencaptureui正在存储文稿，已完成6）/截屏2020-05-14 下午8.50.18.png @ 2020-05-14 20:50:24
 [[file:Screen-Pictures/LeetCode%E5%88%B7%E9%A2%98%E7%AF%87/2020-05-14_20-50-24_%E6%88%AA%E5%B1%8F2020-05-14%20%E4%B8%8B%E5%8D%888.50.18.png]]
 ** 🐈每日题目分配
-   | Date                                            | Topic  | Black_tear             | Giant                    | Van                                     | Check |
-   |-------------------------------------------------+--------+------------------------+--------------------------+-----------------------------------------+-------|
-   | 05/14                                           | DP     | [[https://leetcode-cn.com/problems/house-robber/][打家劫舍]]               | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/][买卖股票的最佳时机]]       | [[https://leetcode-cn.com/problems/maximum-subarray/][最大子序和]]                              | ☑️     |
-   | 05/15                                           | DP     | [[https://leetcode-cn.com/problems/house-robber-iii/][打家劫舍 III]]           | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-with-cooldown/][最佳买卖股票时机含冷冻期]] | [[https://leetcode-cn.com/problems/longest-increasing-subsequence/][最长上升子序列]]                          | ☑️     |
-   | 05/16                                           | DP     | [[https://leetcode-cn.com/problems/minimum-path-sum/][最小路径和]]             | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-iii/][买卖股票的最佳时机 III]]   | [[https://leetcode-cn.com/problems/longest-palindromic-substring/][最长回文子串]]                            |       |
-   | 05/17                                           | DP     | [[https://leetcode-cn.com/problems/coin-change/][零钱兑换]]               | [[https://leetcode-cn.com/problems/word-break/][单词拆分]]                 | [[https://leetcode-cn.com/problems/partition-equal-subset-sum/][分割等和子集]]                            |       |
-   |-------------------------------------------------+--------+------------------------+--------------------------+-----------------------------------------+-------|
-   | 05/18                                           | 二叉树 | [[https://leetcode-cn.com/problems/merge-two-binary-trees][合并二叉树]]             | [[https://leetcode-cn.com/problems/maximum-depth-of-binary-tree][二叉树的最大深度]]         | [[https://leetcode-cn.com/problems/symmetric-tree][对称二叉树]]                              | ☑️     |
-   | 05/19                                           | 遍历   | [[https://leetcode-cn.com/problems/construct-binary-tree-from-preorder-and-inorder-traversal][从前序和中序构造二叉树]] | [[https://leetcode-cn.com/problems/binary-tree-inorder-traversal/][非递归中序遍历]]           | [[https://leetcode-cn.com/problems/binary-tree-level-order-traversal/][非递归层序遍历]]                          | ☑️     |
-   | 05/20                                           | 二叉树 | [[https://leetcode-cn.com/problems/lowest-common-ancestor-of-a-binary-tree][二叉树的最近公共祖先]]   | [[https://leetcode-cn.com/problems/validate-binary-search-tree][验证二叉搜索树]]           | [[https://leetcode-cn.com/problems/unique-binary-search-trees][不同的二叉搜索树]]                        | ☑️     |
-   | 05/21                                           | 二叉树 | [[https://leetcode-cn.com/problems/diameter-of-binary-tree][二叉树的直径]]           | [[https://leetcode-cn.com/problems/convert-bst-to-greater-tree][把二叉树转换为累加树]]     | [[https://leetcode-cn.com/problems/flatten-binary-tree-to-linked-list][二叉树展开为链表]]                        |       |
-   | 05/22                                           | 分治   | [[https://leetcode-cn.com/problems/burst-balloons][戳气球]]                 | [[https://leetcode-cn.com/problems/binary-tree-maximum-path-sum][二叉树中的最大路径和]]     | [[https://leetcode-cn.com/problems/serialize-and-deserialize-binary-tree][二叉树的序列化与反序列化]]                |       |
-   | 05/23                                           | DP     | [[https://leetcode-cn.com/problems/maximal-rectangle/][最大矩形]]               | [[https://leetcode-cn.com/problems/regular-expression-matching/][正则表达式匹配]]           | [[https://leetcode-cn.com/problems/longest-valid-parentheses/][最长有效括号]]                            |       |
-   | 05/24                                           | 链表   | [[https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list][删除链表倒数第N个节点]]  | [[https://leetcode-cn.com/problems/linked-list-cycle-ii][环形链表]]                 | [[https://leetcode-cn.com/problems/merge-k-sorted-lists][合并k个排序链表]]                         |       |
-   |-------------------------------------------------+--------+------------------------+--------------------------+-----------------------------------------+-------|
-   | *温馨提示：  这周任务比较难 请做好心理预期！！* |        |                        |                          |                                         |       |
-   | 05/25                                           | DP     | [[https://leetcode-cn.com/problems/counting-bits/][比特位计数]]             | [[https://leetcode-cn.com/problems/perfect-squares/][完全平方数]]               | [[https://leetcode-cn.com/problems/unique-paths/][不同路径]]                                |       |
-   | 05/26                                           | DP     | [[https://leetcode-cn.com/problems/target-sum/][目标和]]                 | [[https://leetcode-cn.com/problems/maximal-square/][最大正方形]]               | [[https://leetcode-cn.com/problems/maximum-product-subarray/][乘积最大子数组]]                          |       |
-   | 05/27                                           | DP     | [[https://leetcode-cn.com/problems/trapping-rain-water/][接雨水]]                 | [[https://leetcode-cn.com/problems/edit-distance/][编辑距离]]                 | [[https://leetcode-cn.com/problems/wildcard-matching][通配符匹配]]                              |       |
-   | 05/28                                           | 堆     | [[https://leetcode-cn.com/problems/kth-largest-element-in-an-array][数组中的第K个最大元素]]  | [[https://leetcode-cn.com/problems/sliding-window-maximum/][滑动窗口最大值]]           | [[https://leetcode-cn.com/problems/remove-invalid-parentheses/][删除无效的括号]]                          |       |
-   | 05/29                                           | 数组   | [[https://leetcode-cn.com/problems/3sum][三数之和]]               | [[https://leetcode-cn.com/problems/next-permutation][下一个排列]]               | [[https://leetcode-cn.com/problems/find-first-and-last-position-of-element-in-sorted-array][在排序数组中查找元素的第一个和最后一...]] |       |
-   | 05/30                                           | 链表   | [[https://leetcode-cn.com/problems/add-two-numbers][两数相加]]               | [[https://leetcode-cn.com/problems/sort-list][排序链表]]                 | [[https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list][删除链表的倒数第N个节点]]                 |       |
-   | 05/31                                           | 分治   | [[https://leetcode-cn.com/problems/majority-element][多数元素]]               | [[https://leetcode-cn.com/problems/search-a-2d-matrix-ii][搜索二维矩阵 II]]          | [[https://leetcode-cn.com/problems/merge-k-sorted-lists][合并K个排序链表]]                         |       |
+   | Date                                          | Topic  | Black_tear             | Giant                    | Van                                     | Check |
+   |-----------------------------------------------+--------+------------------------+--------------------------+-----------------------------------------+-------|
+   | 05/14                                         | DP     | [[https://leetcode-cn.com/problems/house-robber/][打家劫舍]]               | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/][买卖股票的最佳时机]]       | [[https://leetcode-cn.com/problems/maximum-subarray/][最大子序和]]                              | ☑️     |
+   | 05/15                                         | DP     | [[https://leetcode-cn.com/problems/house-robber-iii/][打家劫舍 III]]           | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-with-cooldown/][最佳买卖股票时机含冷冻期]] | [[https://leetcode-cn.com/problems/longest-increasing-subsequence/][最长上升子序列]]                          | ☑️     |
+   | 05/16                                         | DP     | [[https://leetcode-cn.com/problems/minimum-path-sum/][最小路径和]]             | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-iii/][买卖股票的最佳时机 III]]   | [[https://leetcode-cn.com/problems/longest-palindromic-substring/][最长回文子串]]                            |       |
+   | 05/17                                         | DP     | [[https://leetcode-cn.com/problems/coin-change/][零钱兑换]]               | [[https://leetcode-cn.com/problems/word-break/][单词拆分]]                 | [[https://leetcode-cn.com/problems/partition-equal-subset-sum/][分割等和子集]]                            |       |
+   |-----------------------------------------------+--------+------------------------+--------------------------+-----------------------------------------+-------|
+   | 05/18                                         | 二叉树 | [[https://leetcode-cn.com/problems/merge-two-binary-trees][合并二叉树]]             | [[https://leetcode-cn.com/problems/maximum-depth-of-binary-tree][二叉树的最大深度]]         | [[https://leetcode-cn.com/problems/symmetric-tree][对称二叉树]]                              | ☑️     |
+   | 05/19                                         | 遍历   | [[https://leetcode-cn.com/problems/construct-binary-tree-from-preorder-and-inorder-traversal][从前序和中序构造二叉树]] | [[https://leetcode-cn.com/problems/binary-tree-inorder-traversal/][非递归中序遍历]]           | [[https://leetcode-cn.com/problems/binary-tree-level-order-traversal/][非递归层序遍历]]                          | ☑️     |
+   | 05/20                                         | 二叉树 | [[https://leetcode-cn.com/problems/lowest-common-ancestor-of-a-binary-tree][二叉树的最近公共祖先]]   | [[https://leetcode-cn.com/problems/validate-binary-search-tree][验证二叉搜索树]]           | [[https://leetcode-cn.com/problems/unique-binary-search-trees][不同的二叉搜索树]]                        | ☑️     |
+   | 05/21                                         | 二叉树 | [[https://leetcode-cn.com/problems/diameter-of-binary-tree][二叉树的直径]]           | [[https://leetcode-cn.com/problems/convert-bst-to-greater-tree][把二叉树转换为累加树]]     | [[https://leetcode-cn.com/problems/flatten-binary-tree-to-linked-list][二叉树展开为链表]]                        |       |
+   | 05/22                                         | 分治   | [[https://leetcode-cn.com/problems/burst-balloons][戳气球]]                 | [[https://leetcode-cn.com/problems/binary-tree-maximum-path-sum][二叉树中的最大路径和]]     | [[https://leetcode-cn.com/problems/serialize-and-deserialize-binary-tree][二叉树的序列化与反序列化]]                |       |
+   | 05/23                                         | DP     | [[https://leetcode-cn.com/problems/maximal-rectangle/][最大矩形]]               | [[https://leetcode-cn.com/problems/regular-expression-matching/][正则表达式匹配]]           | [[https://leetcode-cn.com/problems/longest-valid-parentheses/][最长有效括号]]                            |       |
+   | 05/24                                         | 链表   | [[https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list][删除链表倒数第N个节点]]  | [[https://leetcode-cn.com/problems/linked-list-cycle-ii][环形链表]]                 | [[https://leetcode-cn.com/problems/merge-k-sorted-lists][合并k个排序链表]]                         |       |
+   |-----------------------------------------------+--------+------------------------+--------------------------+-----------------------------------------+-------|
+   | *温馨提示：这周任务比较难 请做好心理预期！！* |        |                        |                          |                                         |       |
+   | 05/25                                         | DP     | [[https://leetcode-cn.com/problems/counting-bits/][比特位计数]]             | [[https://leetcode-cn.com/problems/perfect-squares/][完全平方数]]               | [[https://leetcode-cn.com/problems/unique-paths/][不同路径]]                                |       |
+   | 05/26                                         | DP     | [[https://leetcode-cn.com/problems/target-sum/][目标和]]                 | [[https://leetcode-cn.com/problems/maximal-square/][最大正方形]]               | [[https://leetcode-cn.com/problems/maximum-product-subarray/][乘积最大子数组]]                          |       |
+   | 05/27                                         | DP     | [[https://leetcode-cn.com/problems/trapping-rain-water/][接雨水]]                 | [[https://leetcode-cn.com/problems/edit-distance/][编辑距离]]                 | [[https://leetcode-cn.com/problems/wildcard-matching][通配符匹配]]                              |       |
+   | 05/28                                         | 堆     | [[https://leetcode-cn.com/problems/kth-largest-element-in-an-array][数组中的第K个最大元素]]  | [[https://leetcode-cn.com/problems/sliding-window-maximum/][滑动窗口最大值]]           | [[https://leetcode-cn.com/problems/remove-invalid-parentheses/][删除无效的括号]]                          |       |
+   | 05/29                                         | 数组   | [[https://leetcode-cn.com/problems/3sum][三数之和]]               | [[https://leetcode-cn.com/problems/next-permutation][下一个排列]]               | [[https://leetcode-cn.com/problems/find-first-and-last-position-of-element-in-sorted-array][在排序数组中查找元素的第一个和最后一...]] |       |
+   | 05/30                                         | 链表   | [[https://leetcode-cn.com/problems/add-two-numbers][两数相加]]               | [[https://leetcode-cn.com/problems/sort-list][排序链表]]                 | [[https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list][删除链表的倒数第N个节点]]                 |       |
+   | 05/31                                         | 分治   | [[https://leetcode-cn.com/problems/majority-element][多数元素]]               | [[https://leetcode-cn.com/problems/search-a-2d-matrix-ii][搜索二维矩阵 II]]          | [[https://leetcode-cn.com/problems/merge-k-sorted-lists][合并K个排序链表]]                         |       |
 ** 🧠解题思路
 *** 题目列表
 **** 动态规划
@@ -67,6 +67,7 @@
      * [[file:./coding/322_零钱兑换.py][322.零钱兑换]]
      * [[file:./coding/337_打家劫舍III.py][🍊337.打家劫舍III]]
      * [[file:./coding/416_分割等和子集.py][416.分割等和子集]]🤓
+     * [[file:/coding/279_完全平方数.py][279.完全平方数]]😄
 **** 二叉树
     * [[file:./coding/94_二叉树的中序遍历.py][94.二叉树的中序遍历]]
     * [[file:./coding/96_不同的二叉搜索树.py][96.不同的二叉搜索树]]😭
@@ -78,13 +79,15 @@
     * [[file:./coding/114_二叉树展开为链表.py][114.二叉树展开链表]]🐶
     * [[file:/coding/124_二叉树中的最大路径和.py][124. 二叉树中的最大路径和]]
     * [[file:./coding/236_二叉树的最近公共祖先.py][236.二叉树的最近公共祖先]]😫
-    * [[file:/coding/538_把二叉搜索树转换为累加树.py][538.把二叉搜索树转换为累加树]]
-    * 😫[[file:./coding/617_合并二叉树.py][617.合并二叉树]]
-    * [[file:./coding/543_二叉树的直径.py][543.二叉树的直径😊]]
-    * [[file:./coding/312_戳气球.py][312.戳气球😖]]
     * [[file:./coding/297_二叉树的序列化与反序列化.py][297.二叉树序列化和反序列化]]😢
+    * [[file:./coding/312_戳气球.py][312.戳气球😖]]
+    * [[file:/coding/538_把二叉搜索树转换为累加树.py][538.把二叉搜索树转换为累加树]]
+    * [[file:./coding/543_二叉树的直径.py][543.二叉树的直径😊]]
+    * 😫[[file:./coding/617_合并二叉树.py][617.合并二叉树]]
 **** 栈   
     * [[file:./coding/32_最长有效括号.py][32.最长有效括号😭]]
+**** 链表
+    * [[file:/coding/142_环形链表II.py][142.环形链表II]]
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题     | deadline      |
