--- a/README.org
+++ b/README.org
@@ -87,6 +87,7 @@
 **** 栈   
     * [[file:./coding/32_最长有效括号.py][32.最长有效括号😭]]
 **** 链表
+    * [[file:./coding/23_合并K个排序链表.py][23.合并K个排序链表]]😁
     * [[file:/coding/142_环形链表II.py][142.环形链表II]]😊
 * 📣MachineLearning分享篇
 ** ✈️学习计划
