--- a/README.org
+++ b/README.org
@@ -54,6 +54,7 @@
 **** 动态规划
      * [[file:./coding/5_最长回文子串.py][5.最长回文子串]]⛽️
      * [[file:/coding/10_正则表达式匹配.py][10. 正则表达式匹配]]😭推荐阅读:[[https://leetcode-cn.com/problems/regular-expression-matching/solution/ji-yu-guan-fang-ti-jie-gen-xiang-xi-de-jiang-jie-b/][正则表达式-详细讲解，由浅入深]]
+     * [[file:./coding/44_通配符匹配.py][44.通配符匹配🦶]]
      * [[/coding/53_最大子序和.py][53.最大子序和]]
      * [[file:./coding/62_不同路径.py][62.不同路径]]🐶
      * [[file:./coding/64_最小路径和.py][64.最小路径和]]😭
