--- a/README.org
+++ b/README.org
@@ -90,6 +90,8 @@
 **** 链表
     * [[file:./coding/23_合并K个排序链表.py][23.合并K个排序链表]]😁
     * [[file:/coding/142_环形链表II.py][142.环形链表II]]😊
+**** 位运算
+    * [[file:./coding/338_比特位计数.py][338.比特位计数]]
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题     | deadline      |
