--- a/README.org
+++ b/README.org
@@ -95,6 +95,8 @@
     * [[file:/coding/142_环形链表II.py][142.环形链表II]]😊
 **** 位运算
     * [[file:./coding/338_比特位计数.py][338.比特位计数]]
+**** BFS
+    * [[file:./coding/301_删除无效的括号.py][301.删除无效的括号]]
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题     | deadline      |
