--- a/README.org
+++ b/README.org
@@ -89,6 +89,7 @@
     * 😫[[file:./coding/617_合并二叉树.py][617.合并二叉树]]
 **** 栈   
     * [[file:./coding/32_最长有效括号.py][32.最长有效括号😭]]
+    * [[file:./coding/42_接雨水.py][42.接雨水🦆]]
 **** 链表
     * [[file:./coding/23_合并K个排序链表.py][23.合并K个排序链表]]😁
     * [[file:/coding/142_环形链表II.py][142.环形链表II]]😊
