--- a/README.org
+++ b/README.org
@@ -87,13 +87,15 @@
     * [[file:/coding/538_把二叉搜索树转换为累加树.py][538.把二叉搜索树转换为累加树]]
     * [[file:./coding/543_二叉树的直径.py][543.二叉树的直径😊]]
     * 😫[[file:./coding/617_合并二叉树.py][617.合并二叉树]]
+**** 数组
+    * [[file:/coding/31_下一个排列.py][31.下一个排列]]
 **** 栈   
     * [[file:./coding/32_最长有效括号.py][32.最长有效括号😭]]
     * [[file:./coding/42_接雨水.py][42.接雨水🦆]]
 **** 链表
+    * [[file:./coding/19_删除链表的倒数第N个节点.py][19.删除链表的倒数第N个节点]]🇫🇯
     * [[file:./coding/23_合并K个排序链表.py][23.合并K个排序链表]]😁
     * [[file:/coding/142_环形链表II.py][142.环形链表II]]😊
-    * [[file:./coding/19_删除链表的倒数第N个节点.py][19.删除链表的倒数第N个节点]]🇫🇯
 **** 位运算
     * [[file:./coding/338_比特位计数.py][338.比特位计数]]
 **** BFS
@@ -112,10 +114,10 @@
    |          |               |
    |          |               |
 ** 分享链接（专题笔记文件地址）
-   | topic    | black_tear | giant | van                        |
-   | SVM      | -          | -     | [[file:./docs/SVM/机器学习-svm全手写推导_compressed.pdf][机器学习-svm全手写推导.pdf]] |
-   | Word2Vec |            |       |                            |
-   |          |            |       |                            |
+   | topic                     | black_tear | giant          | van                        |
+   | SVM                       | -          | -              | [[file:./docs/SVM/机器学习-svm全手写推导_compressed.pdf][机器学习-svm全手写推导.pdf]] |
+   | Word2Vec                  |            |                |                            |
+   | DecisionTree+RandomForest |            | time:0601-0605 |                            |
 *   TO_DO list
    | 数学基础       | 6月 待安排 |
    | 笔试题         | 6月 待安排 |
@@ -125,8 +127,10 @@
 ** ML/NLP 面经
 **** Todo
 ** 知识点归纳整理
-| 主题           | 标题                                                     | 来源 | 传送门         |
-| 预训练语言模型 | NLP算法面试必备！史上最全！PTMs：NLP预训练模型的全面总结 | 知乎 | [[https://zhuanlan.zhihu.com/p/115014536?utm_source=wechat_session&utm_medium=social&utm_oi=824921009521053696][👉]]             |
+| 主题           | 标题                                                     | 来源   | 传送门 |
+| 预训练语言模型 | NLP算法面试必备！史上最全！PTMs：NLP预训练模型的全面总结 | 知乎   | [[https://zhuanlan.zhihu.com/p/115014536?utm_source=wechat_session&utm_medium=social&utm_oi=824921009521053696][👉]]     |
+| Bert           | 关于BERT，面试官们都怎么问                               | 公众号 | [[https://mp.weixin.qq.com/s/q3qMzCfCPKyRM0-DzD__pw][👉]]     |
+|                |                                                          |        |        |
 ** 优秀论文推荐及解析
 | 主题           | 标题 | 来源    | 解析          |
 | 多模态特征融合 | [[https://www.aclweb.org/anthology/P19-1046/][HFFN]] | ACL2019 | [[todo_exaplain][TODO on zhihu]] |
