--- a/README.org
+++ b/README.org
@@ -103,7 +103,9 @@
 **** 堆
     + [[file:./coding/215_数组中的第K个最大元素.py][215.数组中的第K个最大元素]]😊
 **** 双向队列
-    * [[file:/coding/239_滑动窗口最大值.py][239.滑动窗口最大值]]😭
+    * [[file:/coding/239_滑动窗口最大值.py][239.滑动窗口最大值]]
+**** 二分法
+    * [[file:./coding/34_在排序数组中查找元素的第一个和最后一个位置.py][34.在排序数组中查找元素的第一个和最后一个位置]]😭
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题     | deadline      |
