--- a/README.org
+++ b/README.org
@@ -96,6 +96,7 @@
     * [[file:./coding/19_删除链表的倒数第N个节点.py][19.删除链表的倒数第N个节点]]🇫🇯
     * [[file:./coding/23_合并K个排序链表.py][23.合并K个排序链表]]😁
     * [[file:/coding/142_环形链表II.py][142.环形链表II]]😊
+    * [[file:/coding/148_排序链表.py][148.排序链表]]
 **** 位运算
     * [[file:./coding/338_比特位计数.py][338.比特位计数]]
 **** BFS
@@ -103,9 +104,7 @@
 **** 堆
     + [[file:./coding/215_数组中的第K个最大元素.py][215.数组中的第K个最大元素]]😊
 **** 双向队列
-    * [[file:/coding/239_滑动窗口最大值.py][239.滑动窗口最大值]]
-**** 二分法
-    * [[file:./coding/34_在排序数组中查找元素的第一个和最后一个位置.py][34.在排序数组中查找元素的第一个和最后一个位置]]😭
+    * [[file:/coding/239_滑动窗口最大值.py][239.滑动窗口最大值]]😭
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题     | deadline      |
