--- a/README.org
+++ b/README.org
@@ -131,5 +131,7 @@
 | Bert           | 关于BERT，面试官们都怎么问                               | 公众号 | [[https://mp.weixin.qq.com/s/q3qMzCfCPKyRM0-DzD__pw][👉]]     |
 |                |                                                          |        |        |
 ** 优秀论文推荐及解析
-| 主题           | 标题 | 来源    | 解析          |
-| 多模态特征融合 | [[https://www.aclweb.org/anthology/P19-1046/][HFFN]] | ACL2019 | [[todo_exaplain][TODO on zhihu]] |
+| 主题           | 标题 | 来源    | 一句话概述                             |
+| 多模态特征融合 | [[https://www.aclweb.org/anthology/P19-1046/][HFFN]] | ACL2019 | 如何有效结合语音、文本、图像的特征向量 |
+
+
