--- a/README.org
+++ b/README.org
@@ -90,6 +90,7 @@
 **** 栈   
     * [[file:./coding/32_最长有效括号.py][32.最长有效括号😭]]
     * [[file:./coding/42_接雨水.py][42.接雨水🦆]]
+    * [[file:./coding/84_柱状图中最大的矩形.py][84.柱状图中最大的矩形]]😢
 **** 链表
     * [[file:./coding/19_删除链表的倒数第N个节点.py][19.删除链表的倒数第N个节点]]🇫🇯
     * [[file:./coding/23_合并K个排序链表.py][23.合并K个排序链表]]😁
