--- a/README.org
+++ b/README.org
@@ -26,27 +26,35 @@
 #+DOWNLOADED: file:/var/folders/73/53s3wczx1l32608prn_fdgrm0000gn/T/TemporaryItems/（screencaptureui正在存储文稿，已完成6）/截屏2020-05-14 下午8.50.18.png @ 2020-05-14 20:50:24
 [[file:Screen-Pictures/LeetCode%E5%88%B7%E9%A2%98%E7%AF%87/2020-05-14_20-50-24_%E6%88%AA%E5%B1%8F2020-05-14%20%E4%B8%8B%E5%8D%888.50.18.png]]
 ** 🐈每日题目分配
-   | Date  | Topic  | [[https://github.com/AI-confused][Black_tear]]             | [[https://github.com/yechens/][Giant]]                    | [[https://github.com/weizaiff][Van]]                                     | Check |
-   |-------+--------+------------------------+--------------------------+-----------------------------------------+-------|
-   | 05/14 | DP     | [[https://leetcode-cn.com/problems/house-robber/][打家劫舍]]               | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/][买卖股票的最佳时机]]       | [[https://leetcode-cn.com/problems/maximum-subarray/][最大子序和]]                              | ☑️     |
-   | 05/15 | DP     | [[https://leetcode-cn.com/problems/house-robber-iii/][打家劫舍 III]]           | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-with-cooldown/][最佳买卖股票时机含冷冻期]] | [[https://leetcode-cn.com/problems/longest-increasing-subsequence/][最长上升子序列]]                          | ☑️     |
-   | 05/16 | DP     | [[https://leetcode-cn.com/problems/minimum-path-sum/][最小路径和]]             | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-iii/][买卖股票的最佳时机 III]]   | [[https://leetcode-cn.com/problems/longest-palindromic-substring/][最长回文子串]]                            |       |
-   | 05/17 | DP     | [[https://leetcode-cn.com/problems/coin-change/][零钱兑换]]               | [[https://leetcode-cn.com/problems/word-break/][单词拆分]]                 | [[https://leetcode-cn.com/problems/partition-equal-subset-sum/][分割等和子集]]                            |       |
-   |-------+--------+------------------------+--------------------------+-----------------------------------------+-------|
-   | 05/18 | 二叉树 | [[https://leetcode-cn.com/problems/merge-two-binary-trees][合并二叉树]]             | [[https://leetcode-cn.com/problems/maximum-depth-of-binary-tree][二叉树的最大深度]]         | [[https://leetcode-cn.com/problems/symmetric-tree][对称二叉树]]                              | ☑️     |
-   | 05/19 | 遍历   | [[https://leetcode-cn.com/problems/construct-binary-tree-from-preorder-and-inorder-traversal][从前序和中序构造二叉树]] | [[https://leetcode-cn.com/problems/binary-tree-inorder-traversal/][非递归中序遍历]]           | [[https://leetcode-cn.com/problems/binary-tree-level-order-traversal/][非递归层序遍历]]                          | ☑️     |
-   | 05/20 | 二叉树 | [[https://leetcode-cn.com/problems/lowest-common-ancestor-of-a-binary-tree][二叉树的最近公共祖先]]   | [[https://leetcode-cn.com/problems/validate-binary-search-tree][验证二叉搜索树]]           | [[https://leetcode-cn.com/problems/unique-binary-search-trees][不同的二叉搜索树]]                        | ☑️     |
-   | 05/21 | 二叉树 | [[https://leetcode-cn.com/problems/diameter-of-binary-tree][二叉树的直径]]           | [[https://leetcode-cn.com/problems/convert-bst-to-greater-tree][把二叉树转换为累加树]]     | [[https://leetcode-cn.com/problems/flatten-binary-tree-to-linked-list][二叉树展开为链表]]                        |       |
-   | 05/22 | 分治   | [[https://leetcode-cn.com/problems/burst-balloons][戳气球]]                 | [[https://leetcode-cn.com/problems/binary-tree-maximum-path-sum][二叉树中的最大路径和]]     | [[https://leetcode-cn.com/problems/serialize-and-deserialize-binary-tree][二叉树的序列化与反序列化]]                |       |
-   | 05/23 | DP     | [[https://leetcode-cn.com/problems/maximal-rectangle/][最大矩形]]               | [[https://leetcode-cn.com/problems/regular-expression-matching/][正则表达式匹配]]           | [[https://leetcode-cn.com/problems/longest-valid-parentheses/][最长有效括号]]                            |       |
-   | 05/24 | 链表   | [[https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list][删除链表倒数第N个节点]]  | [[https://leetcode-cn.com/problems/linked-list-cycle-ii][环形链表]]                 | [[https://leetcode-cn.com/problems/merge-k-sorted-lists][合并k个排序链表]]                         |       |
-   | 05/25 | DP     | [[https://leetcode-cn.com/problems/counting-bits/][比特位计数]]             | [[https://leetcode-cn.com/problems/perfect-squares/][完全平方数]]               | [[https://leetcode-cn.com/problems/unique-paths/][不同路径]]                                |       |
-   | 05/26 | DP     | [[https://leetcode-cn.com/problems/target-sum/][目标和]]                 | [[https://leetcode-cn.com/problems/maximal-square/][最大正方形]]               | [[https://leetcode-cn.com/problems/maximum-product-subarray/][乘积最大子数组]]                          |       |
-   | 05/27 | DP     | [[https://leetcode-cn.com/problems/trapping-rain-water/][接雨水]]                 | [[https://leetcode-cn.com/problems/edit-distance/][编辑距离]]                 | [[https://leetcode-cn.com/problems/wildcard-matching][通配符匹配]]                              |       |
-   | 05/28 | 堆     | [[https://leetcode-cn.com/problems/kth-largest-element-in-an-array][数组中的第K个最大元素]]  | [[https://leetcode-cn.com/problems/sliding-window-maximum/][滑动窗口最大值]]           | [[https://leetcode-cn.com/problems/remove-invalid-parentheses/][删除无效的括号]]                          |       |
-   | 05/29 | 数组   | [[https://leetcode-cn.com/problems/3sum][三数之和]]               | [[https://leetcode-cn.com/problems/next-permutation][下一个排列]]               | [[https://leetcode-cn.com/problems/find-first-and-last-position-of-element-in-sorted-array][在排序数组中查找元素的第一个和最后一...]] |       |
-   | 05/30 | 链表   | [[https://leetcode-cn.com/problems/add-two-numbers][两数相加]]               | [[https://leetcode-cn.com/problems/sort-list][排序链表]]                 | [[https://leetcode-cn.com/problems/largest-rectangle-in-histogram/][柱状图中最大的矩形]]                      |       |
-   | 05/31 | 分治   | [[https://leetcode-cn.com/problems/majority-element][多数元素]]               | [[https://leetcode-cn.com/problems/search-a-2d-matrix-ii][搜索二维矩阵 II]]          | [[https://leetcode-cn.com/problems/rotate-list/][旋转链表]]                                |       |
+   | Date               | Topic  | [[https://github.com/AI-confused][Black_tear]]                 | [[https://github.com/yechens/][Giant]]                        | [[https://github.com/weizaiff][Van]]                                        | Check |
+   |--------------------+--------+----------------------------+------------------------------+--------------------------------------------+-------|
+   | 05/14              | DP     | [[https://leetcode-cn.com/problems/house-robber/][198.打家劫舍]]               | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/][121.买卖股票的最佳时机]]       | [[https://leetcode-cn.com/problems/maximum-subarray/][53.最大子序和]]                              | ☑️     |
+   | 05/15              | DP     | [[https://leetcode-cn.com/problems/house-robber-iii/][237.打家劫舍 III]]           | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-with-cooldown/][309.最佳买卖股票时机含冷冻期]] | [[https://leetcode-cn.com/problems/longest-increasing-subsequence/][300.最长上升子序列]]                         | ☑️     |
+   | 05/16              | DP     | [[https://leetcode-cn.com/problems/minimum-path-sum/][64.最小路径和]]              | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-iii/][123.买卖股票的最佳时机 III]]   | [[https://leetcode-cn.com/problems/longest-palindromic-substring/][5.最长回文子串]]                             |       |
+   | 05/17              | DP     | [[https://leetcode-cn.com/problems/coin-change/][322.零钱兑换]]               | [[https://leetcode-cn.com/problems/word-break/][139.单词拆分]]                 | [[https://leetcode-cn.com/problems/partition-equal-subset-sum/][416.分割等和子集]]                           |       |
+   |--------------------+--------+----------------------------+------------------------------+--------------------------------------------+-------|
+   | 05/18              | 二叉树 | [[https://leetcode-cn.com/problems/merge-two-binary-trees][617.合并二叉树]]             | [[https://leetcode-cn.com/problems/maximum-depth-of-binary-tree][104.二叉树的最大深度]]         | [[https://leetcode-cn.com/problems/symmetric-tree][101.对称二叉树]]                             | ☑️     |
+   | 05/19              | 遍历   | [[https://leetcode-cn.com/problems/construct-binary-tree-from-preorder-and-inorder-traversal][105.从前序和中序构造二叉树]] | [[https://leetcode-cn.com/problems/binary-tree-inorder-traversal/][94.非递归中序遍历]]            | [[https://leetcode-cn.com/problems/binary-tree-level-order-traversal/][102.非递归层序遍历]]                         | ☑️     |
+   | 05/20              | 二叉树 | [[https://leetcode-cn.com/problems/lowest-common-ancestor-of-a-binary-tree][236.二叉树的最近公共祖先]]   | [[https://leetcode-cn.com/problems/validate-binary-search-tree][98.验证二叉搜索树]]            | [[https://leetcode-cn.com/problems/unique-binary-search-trees][96.不同的二叉搜索树]]                        | ☑️     |
+   | 05/21              | 二叉树 | [[https://leetcode-cn.com/problems/diameter-of-binary-tree][543.二叉树的直径]]           | [[https://leetcode-cn.com/problems/convert-bst-to-greater-tree][538.把二叉树转换为累加树]]     | [[https://leetcode-cn.com/problems/flatten-binary-tree-to-linked-list][114.二叉树展开为链表]]                       |       |
+   | 05/22              | 分治   | [[https://leetcode-cn.com/problems/burst-balloons][312.戳气球]]                 | [[https://leetcode-cn.com/problems/binary-tree-maximum-path-sum][124.二叉树中的最大路径和]]     | [[https://leetcode-cn.com/problems/serialize-and-deserialize-binary-tree][297.二叉树的序列化与反序列化]]               |       |
+   | 05/23              | DP     | [[https://leetcode-cn.com/problems/maximal-rectangle/][85.最大矩形]]                | [[https://leetcode-cn.com/problems/regular-expression-matching/][10.正则表达式匹配]]            | [[https://leetcode-cn.com/problems/longest-valid-parentheses/][32.最长有效括号]]                            |       |
+   | 05/24              | 链表   | [[https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list][19.删除链表倒数第N个节点]]   | [[https://leetcode-cn.com/problems/linked-list-cycle-ii][142.环形链表]]                 | [[https://leetcode-cn.com/problems/merge-k-sorted-lists][23.合并k个排序链表]]                         |       |
+   | 05/25              | DP     | [[https://leetcode-cn.com/problems/counting-bits/][338.比特位计数]]             | [[https://leetcode-cn.com/problems/perfect-squares/][279.完全平方数]]               | [[https://leetcode-cn.com/problems/unique-paths/][62.不同路径]]                                |       |
+   | 05/26              | DP     | [[https://leetcode-cn.com/problems/target-sum/][494.目标和]]                 | [[https://leetcode-cn.com/problems/maximal-square/][221.最大正方形]]               | [[https://leetcode-cn.com/problems/maximum-product-subarray/][152.乘积最大子数组]]                         |       |
+   | 05/27              | DP     | [[https://leetcode-cn.com/problems/trapping-rain-water/][42.接雨水]]                  | [[https://leetcode-cn.com/problems/edit-distance/][72.编辑距离]]                  | [[https://leetcode-cn.com/problems/wildcard-matching][44.通配符匹配]]                              |       |
+   | 05/28              | 堆     | [[https://leetcode-cn.com/problems/kth-largest-element-in-an-array][215.数组中的第K个最大元素]]  | [[https://leetcode-cn.com/problems/sliding-window-maximum/][239.滑动窗口最大值]]           | [[https://leetcode-cn.com/problems/remove-invalid-parentheses/][301.删除无效的括号]]                         |       |
+   | 05/29              | 数组   | [[https://leetcode-cn.com/problems/3sum][15.三数之和]]                | [[https://leetcode-cn.com/problems/next-permutation][31.下一个排列]]                | [[https://leetcode-cn.com/problems/find-first-and-last-position-of-element-in-sorted-array][34.在排序数组中查找元素的第一个和最后一...]] |       |
+   | 05/30              | 链表   | [[https://leetcode-cn.com/problems/add-two-numbers][2.两数相加]]                 | [[https://leetcode-cn.com/problems/sort-list][148.排序链表]]                 | [[https://leetcode-cn.com/problems/largest-rectangle-in-histogram/][84.柱状图中最大的矩形]]                      |       |
+   | 05/31              | 分治   | [[https://leetcode-cn.com/problems/majority-element][169.多数元素]]               | [[https://leetcode-cn.com/problems/search-a-2d-matrix-ii][240.搜索二维矩阵 II]]          | [[https://leetcode-cn.com/problems/rotate-list/][61.旋转链表]]                                |       |
+   | 新的一月新的开始！ | 💪     | 💪                         | 💪                           | 💪                                         |       |
+   | 06/01              | 分治   | [[https://leetcode-cn.com/problems/kth-largest-element-in-an-array/][215.数组中的第K个最大元素]]  | [[https://leetcode-cn.com/problems/median-of-two-sorted-arrays/][4.寻找两个正序数组的中位数]]   | [[https://leetcode-cn.com/problems/er-cha-sou-suo-shu-yu-shuang-xiang-lian-biao-lcof/][面试题36.二叉搜索树与双向链表]]              |       |
+   | 06/02              | 双指针 | [[https://leetcode-cn.com/problems/container-with-most-water/][11.盛最多水的容器]]          | [[https://leetcode-cn.com/problems/3sum-closest][16.最接近的三数之和]]          | [[https://leetcode-cn.com/problems/sort-colors/][75.颜色分类]]                                |       |
+   | 06/03              | 双指针 | [[https://leetcode-cn.com/problems/reverse-string][344.反转字符串]]             | [[https://leetcode-cn.com/problems/reverse-vowels-of-a-string][345.反转字符串中的元音字母]]   | [[https://leetcode-cn.com/problems/intersection-of-two-arrays][349.两个数组的交集]]                         |       |
+   | 06/04              | DFS    | [[https://leetcode-cn.com/problems/course-schedule][207.课程表]]                 | [[https://leetcode-cn.com/problems/number-of-islands][200.岛屿数量]]                 | [[https://leetcode-cn.com/problems/decode-string][394.字符串解码]]                             |       |
+   | 06/05              | DFS    | [[https://leetcode-cn.com/problems/out-of-boundary-paths][576.出界的路径数]]           | [[https://leetcode-cn.com/problems/max-area-of-island][695.岛屿的最大面积]]           | [[https://leetcode-cn.com/problems/shopping-offers][638.大礼包]]                                 |       |
+   | 06/06              | DFS    | [[https://leetcode-cn.com/problems/surrounded-regions/][130.被围绕的区域]]           | [[https://leetcode-cn.com/problems/binary-tree-right-side-view/][199.二叉树的右视图]]           | [[https://leetcode-cn.com/problems/pacific-atlantic-water-flow/][417.太平洋大西洋水流问题]]                   |       |
+   | 06/07              | BFS    | [[https://leetcode-cn.com/problems/intersection-of-two-linked-lists][160.相交链表]]               | [[https://leetcode-cn.com/problems/reverse-linked-list][206.反转链表]]                 | [[https://leetcode-cn.com/problems/palindrome-linked-list][234.回文链表]]                               |       |
 ** 🧠解题思路
 *** 题目列表
 **** 动态规划
@@ -87,6 +95,7 @@
     * 😫[[file:./coding/617_合并二叉树.py][617.合并二叉树]]
 **** 数组
     * [[file:/coding/31_下一个排列.py][31.下一个排列]]
+    * [[file:/coding/240_搜索二维矩阵II.py][240.搜索二维矩阵 II😄]]
 **** 栈   
     * [[file:./coding/32_最长有效括号.py][32.最长有效括号😭]]
     * [[file:./coding/42_接雨水.py][42.接雨水🦆]]
@@ -106,18 +115,16 @@
     * [[file:/coding/239_滑动窗口最大值.py][239.滑动窗口最大值]]😭
 * 📣MachineLearning分享篇
 ** ✈️学习计划
-   | 专题     | deadline      |
-   | SVM      | 05/14 ~ 05/19 |
-   | word2vec | 05/25 ~ 05/26 |
-   | 决策树   | -             |
-   | xgboost  | -             |
-   |          |               |
-   |          |               |
+   | 专题                      | deadline      |
+   | SVM                       | 05/14 ~ 05/19 |
+   | DecisionTree+RandomForest | 06/01 ~ 0605  |
+   | word2vec                  | -             |
+   | xgboost                   | -             |
+   |                           |               |
 ** 分享链接（专题笔记文件地址）
    | topic                     | black_tear | giant          | van                        |
    | SVM                       | -          | -              | [[file:./docs/SVM/机器学习-svm全手写推导_compressed.pdf][机器学习-svm全手写推导.pdf]] |
    | Word2Vec                  |            |                |                            |
-   | DecisionTree+RandomForest |            | time:0601-0605 |                            |
 *   TO_DO list
    | 数学基础       | 6月 待安排 |
    | 笔试题         | 6月 待安排 |
