--- a/README.org
+++ b/README.org
@@ -47,7 +47,7 @@
    | 05/29              | 数组   | [[https://leetcode-cn.com/problems/3sum][15.三数之和]]                | [[https://leetcode-cn.com/problems/next-permutation][31.下一个排列]]                | [[https://leetcode-cn.com/problems/find-first-and-last-position-of-element-in-sorted-array][34.在排序数组中查找元素的第一个和最后一...]] |       |
    | 05/30              | 链表   | [[https://leetcode-cn.com/problems/add-two-numbers][2.两数相加]]                 | [[https://leetcode-cn.com/problems/sort-list][148.排序链表]]                 | [[https://leetcode-cn.com/problems/largest-rectangle-in-histogram/][84.柱状图中最大的矩形]]                      |       |
    | 05/31              | 分治   | [[https://leetcode-cn.com/problems/majority-element][169.多数元素]]               | [[https://leetcode-cn.com/problems/search-a-2d-matrix-ii][240.搜索二维矩阵 II]]          | [[https://leetcode-cn.com/problems/rotate-list/][61.旋转链表]]                                |       |
-   | 新的一月新的开始！ | 💪     | 💪                         | 💪                           | 💪                                         |       |
+   | 新的一月新的开始！ |        | 💪                         | 💪                           | 💪                                         |       |
    | 06/01              | 分治   | [[https://leetcode-cn.com/problems/kth-largest-element-in-an-array/][215.数组中的第K个最大元素]]  | [[https://leetcode-cn.com/problems/median-of-two-sorted-arrays/][4.寻找两个正序数组的中位数]]   | [[https://leetcode-cn.com/problems/er-cha-sou-suo-shu-yu-shuang-xiang-lian-biao-lcof/][面试题36.二叉搜索树与双向链表]]              |       |
    | 06/02              | 双指针 | [[https://leetcode-cn.com/problems/container-with-most-water/][11.盛最多水的容器]]          | [[https://leetcode-cn.com/problems/3sum-closest][16.最接近的三数之和]]          | [[https://leetcode-cn.com/problems/sort-colors/][75.颜色分类]]                                |       |
    | 06/03              | 双指针 | [[https://leetcode-cn.com/problems/reverse-string][344.反转字符串]]             | [[https://leetcode-cn.com/problems/reverse-vowels-of-a-string][345.反转字符串中的元音字母]]   | [[https://leetcode-cn.com/problems/intersection-of-two-arrays][349.两个数组的交集]]                         |       |
