--- a/README.org
+++ b/README.org
@@ -96,6 +96,7 @@
 **** 数组
     * [[file:/coding/31_下一个排列.py][31.下一个排列]]
     * [[file:/coding/240_搜索二维矩阵II.py][240.搜索二维矩阵 II😄]]
+    * [[file:./coding/169_多数元素.py][169.多数元素😄]]
 **** 栈   
     * [[file:./coding/32_最长有效括号.py][32.最长有效括号😭]]
     * [[file:./coding/42_接雨水.py][42.接雨水🦆]]
@@ -105,6 +106,7 @@
     * [[file:./coding/23_合并K个排序链表.py][23.合并K个排序链表]]😁
     * [[file:/coding/142_环形链表II.py][142.环形链表II]]😊
     * [[file:/coding/148_排序链表.py][148.排序链表]]
+    * [[file:./coding/2_两数相加.py][2.两数相加]]😜
 **** 位运算
     * [[file:./coding/338_比特位计数.py][338.比特位计数]]
 **** BFS
