--- a/README.org
+++ b/README.org
@@ -102,11 +102,14 @@
     * [[file:./coding/42_接雨水.py][42.接雨水🦆]]
     * [[file:./coding/84_柱状图中最大的矩形.py][84.柱状图中最大的矩形]]😢
 **** 链表
+    * [[file:./coding/2_两数相加.py][2.两数相加]]😜
     * [[file:./coding/19_删除链表的倒数第N个节点.py][19.删除链表的倒数第N个节点]]🇫🇯
     * [[file:./coding/23_合并K个排序链表.py][23.合并K个排序链表]]😁
+    * [[file:./coding/61_旋转链表.py][61.旋转链表]]😁
     * [[file:/coding/142_环形链表II.py][142.环形链表II]]😊
     * [[file:/coding/148_排序链表.py][148.排序链表]]
-    * [[file:./coding/2_两数相加.py][2.两数相加]]😜
+    
+
 **** 位运算
     * [[file:./coding/338_比特位计数.py][338.比特位计数]]
 **** BFS
