--- a/README.org
+++ b/README.org
@@ -108,8 +108,6 @@
     * [[file:./coding/61_旋转链表.py][61.旋转链表]]😁
     * [[file:/coding/142_环形链表II.py][142.环形链表II]]😊
     * [[file:/coding/148_排序链表.py][148.排序链表]]
-    
-
 **** 位运算
     * [[file:./coding/338_比特位计数.py][338.比特位计数]]
 **** BFS
@@ -118,6 +116,8 @@
     + [[file:./coding/215_数组中的第K个最大元素.py][215.数组中的第K个最大元素]]😊
 **** 双向队列
     * [[file:/coding/239_滑动窗口最大值.py][239.滑动窗口最大值]]😭
+**** 二分查找
+    * [[file:/coding/4_寻找两个正序数组的中位数.py][4.寻找两个正序数组的中位数]]
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题                      | deadline      |
