--- a/README.org
+++ b/README.org
@@ -1,131 +1,3 @@
-git push
-git add .
-ls
-mkdir MachineLearning
-mkdir LeetCode
-cd MachineLearning/
-mkdir SVM
-cd ../LeetCode/
-cd ..
-git add .
-git commit -m '更新readme‘'
-git push
-cd ../../gitlab/sentence-similarity/
-ls
-cd match_zoo/
-ls
-mkdir BIMPM
-cd BIMPM/
-ls
-cd ..
-cd ../
-cd ../
-ls
-cd QA-SOTA/
-ls
-cd ../../github/
-ls
-git clone https://github.com/AI-confused/QA-SOTA.git
-cd QA-SOTA/
-ls
-mv ../../gitlab/QA-SOTA/* ./
-ls
-ls -a
-cd ../../gitlab/QA-SOTA/
-ls
-ls -a
-cat .gitignore 
-mv .gitignore  ../../github/QA-SOTA/.gitignore
-cd ..
-rm -r QA-SOTA/
-cd ../github/QA-SOTA/
-s
-ls
-cat .gitignore 
-ls
-git add .
-git commit -m 'first update'
-git push
-ls
-cd ..
-cd QA-SOTA/
-git pull
-cd ../QiuZhao-ChongChongChong
-ls
-ls
-cd LeetCode/
-ls
-cd ..
-git pull
-ls
-rm -r LeetCode/
-rm -r MachineLearning/
-ls
-cd coding/
-ls
-mv 121_\ 买卖股票的最佳时机.py 121_买卖股票的最佳时机.py
-ls
-cd ..
-ls
-git add .
-git commit -m 'update'
-git push
-git pull
-cd coding/
-ls
-git add .
-git commit -m 'update'
-git push
-git add .
-git commit -m 'update'
-git add .
-cd ..
-git add .
-git commit -m 'update;'
-git push
-git add .
-git commit -m 'u'
-git push
-git add .
-git commit -m 'i;'
-git push
-git add .
-git commit -m 'o'
-git push
-git add .
-git commit -m 'h'
-git push
-git add .
-git commit -m 'mao'
-git push
-rm ~/gitlab/sentence-similarity/match_zoo/BIMPM/src_code/run_bimpm.py 
-cd ~/gitlab/sentence-similarity/match_zoo/BIMPM/src_code/
-ls
-cd ../../
-cd ../
-git add .
-git commit -m 'update bimpm'
-git push
-git add .
-git status
-git commit -m 'update bimpm'
-git push
-cd ../../github/QiuZhao-ChongChongChong/
-git pull
-git add .
-git commit -m 'update 0515'
-git push
-git pull
-git add .
-git commit -m '0515'
-git status
-git push
-git add .
-git commit -m '0515'
-git push
-git pull
-git pull
-git pull
 * 🔧Emacs工具篇
 ** 常用快捷键(ctrl-c; alt-m)
    | 功能                      | 快捷键                               |
@@ -236,6 +108,7 @@ git pull
     * [[file:./coding/2_两数相加.py][2.两数相加]]😜
     * [[file:./coding/19_删除链表的倒数第N个节点.py][19.删除链表的倒数第N个节点]]🇫🇯
     * [[file:./coding/23_合并K个排序链表.py][23.合并K个排序链表]]😁
+    * [[file:./coding/面试题36_二叉搜索树与双向链表.py][面试题36. 二叉搜索树与双向链表]] 建议先导题：[[https://github.com/yechens/QiuZhao-ChongChongChong/blob/master/coding/94_%E4%BA%8C%E5%8F%89%E6%A0%91%E7%9A%84%E4%B8%AD%E5%BA%8F%E9%81%8D%E5%8E%86.py][二叉树的中序遍历]]➕
     * [[file:./coding/61_旋转链表.py][61.旋转链表]]😁
     * [[file:/coding/142_环形链表II.py][142.环形链表II]]😊
     * [[file:/coding/148_排序链表.py][148.排序链表]]
