--- a/README.org
+++ b/README.org
@@ -100,8 +100,9 @@
     * [[file:/coding/240_搜索二维矩阵II.py][240.搜索二维矩阵 II😄]]
     * [[file:./coding/973_最接近原点的k个点.py][973.最接近原点的k个点]]
 **** 双指针
-     + [[file:./coding/15_三数之和.py][15.三数之和😂]]
      + [[file:./coding/11_成最多水的容器.py][11.盛最多水的容器]]
+     + [[file:./coding/15_三数之和.py][15.三数之和😂]]
+     + [[file:/coding/16_最接近的三数之和.py][16.最接近的三数之和]]😁
 **** 栈   
     * [[file:./coding/32_最长有效括号.py][32.最长有效括号😭]]
     * [[file:./coding/42_接雨水.py][42.接雨水🦆]]
