--- a/README.org
+++ b/README.org
@@ -103,6 +103,8 @@
      + [[file:./coding/11_成最多水的容器.py][11.盛最多水的容器]]
      + [[file:./coding/15_三数之和.py][15.三数之和😂]]
      + [[file:/coding/16_最接近的三数之和.py][16.最接近的三数之和]]😁
+**** 三指针
+    * [[file:./coding/74_颜色分类.py][74.颜色分类]]😭
 **** 栈   
     * [[file:./coding/32_最长有效括号.py][32.最长有效括号😭]]
     * [[file:./coding/42_接雨水.py][42.接雨水🦆]]
