--- a/README.org
+++ b/README.org
@@ -127,6 +127,8 @@
     * [[file:/coding/239_滑动窗口最大值.py][239.滑动窗口最大值]]😭
 **** 二分查找
     * [[file:/coding/4_寻找两个正序数组的中位数.py][4.寻找两个正序数组的中位数]]
+**** 哈希表
+    * [[file:./coding/349_两个数组的交集.py][349. 两个数组的交集]]😄
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题                      | deadline      |
