--- a/README.org
+++ b/README.org
@@ -103,6 +103,7 @@
      + [[file:./coding/11_成最多水的容器.py][11.盛最多水的容器]]
      + [[file:./coding/15_三数之和.py][15.三数之和😂]]
      + [[file:/coding/16_最接近的三数之和.py][16.最接近的三数之和]]😁
+     + [[file:/coding/345_反转字符串中的元音字母.py][345.反转字符串中的元音字母]]😁
 **** 三指针
     * [[file:./coding/74_颜色分类.py][74.颜色分类]]😭
 **** 栈   
