--- a/README.org
+++ b/README.org
@@ -30,8 +30,8 @@
    |--------------------+--------+----------------------------+------------------------------+--------------------------------------------+-------|
    | 05/14              | DP     | [[https://leetcode-cn.com/problems/house-robber/][198.打家劫舍]]               | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock/][121.买卖股票的最佳时机]]       | [[https://leetcode-cn.com/problems/maximum-subarray/][53.最大子序和]]                              | ☑️     |
    | 05/15              | DP     | [[https://leetcode-cn.com/problems/house-robber-iii/][237.打家劫舍 III]]           | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-with-cooldown/][309.最佳买卖股票时机含冷冻期]] | [[https://leetcode-cn.com/problems/longest-increasing-subsequence/][300.最长上升子序列]]                         | ☑️     |
-   | 05/16              | DP     | [[https://leetcode-cn.com/problems/minimum-path-sum/][64.最小路径和]]              | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-iii/][123.买卖股票的最佳时机 III]]   | [[https://leetcode-cn.com/problems/longest-palindromic-substring/][5.最长回文子串]]                             | ☑️    |
-   | 05/17              | DP     | [[https://leetcode-cn.com/problems/coin-change/][322.零钱兑换]]               | [[https://leetcode-cn.com/problems/word-break/][139.单词拆分]]                 | [[https://leetcode-cn.com/problems/partition-equal-subset-sum/][416.分割等和子集]]                           |  ☑️   |
+   | 05/16              | DP     | [[https://leetcode-cn.com/problems/minimum-path-sum/][64.最小路径和]]              | [[https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-iii/][123.买卖股票的最佳时机 III]]   | [[https://leetcode-cn.com/problems/longest-palindromic-substring/][5.最长回文子串]]                             | ☑️     |
+   | 05/17              | DP     | [[https://leetcode-cn.com/problems/coin-change/][322.零钱兑换]]               | [[https://leetcode-cn.com/problems/word-break/][139.单词拆分]]                 | [[https://leetcode-cn.com/problems/partition-equal-subset-sum/][416.分割等和子集]]                           | ☑️     |
    |--------------------+--------+----------------------------+------------------------------+--------------------------------------------+-------|
    | 05/18              | 二叉树 | [[https://leetcode-cn.com/problems/merge-two-binary-trees][617.合并二叉树]]             | [[https://leetcode-cn.com/problems/maximum-depth-of-binary-tree][104.二叉树的最大深度]]         | [[https://leetcode-cn.com/problems/symmetric-tree][101.对称二叉树]]                             | ☑️     |
    | 05/19              | 遍历   | [[https://leetcode-cn.com/problems/construct-binary-tree-from-preorder-and-inorder-traversal][105.从前序和中序构造二叉树]] | [[https://leetcode-cn.com/problems/binary-tree-inorder-traversal/][94.非递归中序遍历]]            | [[https://leetcode-cn.com/problems/binary-tree-level-order-traversal/][102.非递归层序遍历]]                         | ☑️     |
@@ -49,7 +49,7 @@
    | 05/31              | 分治   | [[https://leetcode-cn.com/problems/majority-element][169.多数元素]]               | [[https://leetcode-cn.com/problems/search-a-2d-matrix-ii][240.搜索二维矩阵 II]]          | [[https://leetcode-cn.com/problems/rotate-list/][61.旋转链表]]                                | ☑️     |
    | 新的一月新的开始！ |        | 💪                         | 💪                           | 💪                                         |       |
    | 06/01              | 分治   | [[https://leetcode-cn.com/problems/k-closest-points-to-origin/][973.最接近原点的 K 个点]]    | [[https://leetcode-cn.com/problems/median-of-two-sorted-arrays/][4.寻找两个正序数组的中位数]]   | [[https://leetcode-cn.com/problems/er-cha-sou-suo-shu-yu-shuang-xiang-lian-biao-lcof/][面试题36.二叉搜索树与双向链表]]              | ☑️     |
-   | 06/02              | 双指针 | [[https://leetcode-cn.com/problems/container-with-most-water/][11.盛最多水的容器]]          | [[https://leetcode-cn.com/problems/3sum-closest][16.最接近的三数之和]]          | [[https://leetcode-cn.com/problems/sort-colors/][75.颜色分类]]                                | ☑️    |
+   | 06/02              | 双指针 | [[https://leetcode-cn.com/problems/container-with-most-water/][11.盛最多水的容器]]          | [[https://leetcode-cn.com/problems/3sum-closest][16.最接近的三数之和]]          | [[https://leetcode-cn.com/problems/sort-colors/][75.颜色分类]]                                | ☑️     |
    | 06/03              | 双指针 | [[https://leetcode-cn.com/problems/reverse-string][344.反转字符串]]             | [[https://leetcode-cn.com/problems/reverse-vowels-of-a-string][345.反转字符串中的元音字母]]   | [[https://leetcode-cn.com/problems/intersection-of-two-arrays][349.两个数组的交集]]                         |       |
    | 06/04              | DFS    | [[https://leetcode-cn.com/problems/course-schedule][207.课程表]]                 | [[https://leetcode-cn.com/problems/number-of-islands][200.岛屿数量]]                 | [[https://leetcode-cn.com/problems/decode-string][394.字符串解码]]                             |       |
    | 06/05              | DFS    | [[https://leetcode-cn.com/problems/out-of-boundary-paths][576.出界的路径数]]           | [[https://leetcode-cn.com/problems/max-area-of-island][695.岛屿的最大面积]]           | [[https://leetcode-cn.com/problems/shopping-offers][638.大礼包]]                                 |       |
@@ -103,7 +103,7 @@
      + [[file:./coding/11_成最多水的容器.py][11.盛最多水的容器]]
      + [[file:./coding/15_三数之和.py][15.三数之和😂]]
      + [[file:/coding/16_最接近的三数之和.py][16.最接近的三数之和]]😁
-     + [[file:/coding/345_反转字符串中的元音字母.py][345.反转字符串中的元音字母]]😁
+     + [[file:./coding/344_反转字符串.py][344.反转字符串😊]]
 **** 三指针
     * [[file:./coding/74_颜色分类.py][74.颜色分类]]😭
 **** 栈   
@@ -128,8 +128,6 @@
     * [[file:/coding/239_滑动窗口最大值.py][239.滑动窗口最大值]]😭
 **** 二分查找
     * [[file:/coding/4_寻找两个正序数组的中位数.py][4.寻找两个正序数组的中位数]]
-**** 哈希表
-    * [[file:./coding/349_两个数组的交集.py][349. 两个数组的交集]]😄
 * 📣MachineLearning分享篇
 ** ✈️学习计划
    | 专题                      | deadline      |
