--- a/README.org
+++ b/README.org
@@ -149,10 +149,11 @@
 ** ML/NLP 面经
 **** Todo
 ** 知识点归纳整理
-| 主题           | 标题                                                     | 来源   | 传送门 |
-| 预训练语言模型 | NLP算法面试必备！史上最全！PTMs：NLP预训练模型的全面总结 | 知乎   | [[https://zhuanlan.zhihu.com/p/115014536?utm_source=wechat_session&utm_medium=social&utm_oi=824921009521053696][👉]]     |
-| Bert           | 关于BERT，面试官们都怎么问                               | 公众号 | [[https://mp.weixin.qq.com/s/q3qMzCfCPKyRM0-DzD__pw][👉]]     |
-|                |                                                          |        |        |
+| 主题             | 标题                                                     | 来源        | 传送门 |
+| 预训练语言模型   | NLP算法面试必备！史上最全！PTMs：NLP预训练模型的全面总结 | 知乎        | [[https://zhuanlan.zhihu.com/p/115014536?utm_source=wechat_session&utm_medium=social&utm_oi=824921009521053696][👉]]     |
+| Bert             | 关于BERT，面试官们都怎么问                               | 公众号      | [[https://mp.weixin.qq.com/s/q3qMzCfCPKyRM0-DzD__pw][👉]]     |
+| 机器学习概述博客 |                                                          | gitbooks.io | [[https://shunliz.gitbooks.io/machine-learning/content/dl/word2vec/cbow-skip-n.html][🚢]]     |
+|                  |                                                          |             |        |
 ** 优秀论文推荐及解析
 | 主题           | 标题 | 来源    | 一句话概述                             |
 | 多模态特征融合 | [[https://www.aclweb.org/anthology/P19-1046/][HFFN]] | ACL2019 | 如何有效结合语音、文本、图像的特征向量 |
