--- a/README.org
+++ b/README.org
@@ -110,6 +110,7 @@
     * [[file:./coding/32_最长有效括号.py][32.最长有效括号😭]]
     * [[file:./coding/42_接雨水.py][42.接雨水🦆]]
     * [[file:./coding/84_柱状图中最大的矩形.py][84.柱状图中最大的矩形]]😢
+    * [[file:./coding/394_字符串解码.py][394.字符串解码😯]]
 **** 链表
     * [[file:./coding/2_两数相加.py][2.两数相加]]😜
     * [[file:./coding/19_删除链表的倒数第N个节点.py][19.删除链表的倒数第N个节点]]🇫🇯
