--- a/README.org
+++ b/README.org
@@ -125,7 +125,7 @@
 **** BFS
     * [[file:./coding/301_删除无效的括号.py][301.删除无效的括号]]
 **** DFS
-    * [[file:/coding/200_岛屿数量.py][200.岛屿数量]]😁
+    * [[file:/coding/200_岛屿数量.py][200.岛屿数量]]😊
 **** 堆
     + [[file:./coding/215_数组中的第K个最大元素.py][215.数组中的第K个最大元素]]😊
 **** 双向队列
