--- a/README.org
+++ b/README.org
@@ -126,6 +126,7 @@
     * [[file:./coding/301_删除无效的括号.py][301.删除无效的括号]]
 **** DFS
     * [[file:/coding/200_岛屿数量.py][200.岛屿数量]]😊
+    * [[file:./coding/207_课程表.py][207.课程表]]
 **** 堆
     + [[file:./coding/215_数组中的第K个最大元素.py][215.数组中的第K个最大元素]]😊
 **** 双向队列
